# BevyRayTracing

./: Cargo.toml
src/: lib.rs  math.rs  render.rs  transform.rs  window.rs
src/math/: motor.rs  point.rs  vector2.rs  vector3.rs
src/render/: ray_tracing.wgsl  render_state.rs
