[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = false }
encase = "0.6.1"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.8", features = ["rwh_05"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
